restructure db models; add refs
